[package]
name = "chip8emu"
version = "0.1.0"
authors = ["GLodi <lodi.giulio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.5"
pixels = "0.2.0"
winit = "0.22.2"
winit_input_helper = "0.7.0"